[metadata]
name = dvg
version = 1.0.0-alpha.4
description = A Doc2Vec grep
long_description = file: README-pypi.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/dvg
author = Toshihiro kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
install_requires = 
    appdirs
    colorama ; platform_system == "Windows" 
    docopt
    docx2txt
    html2text
    init-attrs-with-kwargs
    nltk
    numpy >= 1.22.2
    pdftotext ; platform_system != "Windows"
    psutil
    transformers
    toml
    torch
python_requires = >= 3.8

[options.entry_points]
console_scripts = 
    dvg = dvg:main

[options.extras_require]
ja =
    fugashi
    ipadic

[options.package_data]
dvg = 
    models/enwiki-scdv/*
    models/jawiki-scdv/*
    bin/*

# [options.extras_require]  # pip3 install -e .[test]
# test =
#     borb

[tox:tox]
envlist = py38, py39, py310

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
deps =
    borb
commands =
    python -m unittest discover
