[metadata]
name = dvg
version = 1.0.0-beta.13
description = document-vector grep
long_description = file: README-pypi.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/dvg
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    appdirs
    colorama ; platform_system == "Windows" 
    docx2txt
    html2text
    init-attrs-with-kwargs
    nltk
    numpy
    psutil
    toml
    transformers
    win-wildcard

[options.entry_points]
console_scripts =
    dvg = dvg.dvg:main
    dvgi = dvg.dvgi:main

[options.extras_require]
ja =
    fugashi
    ipadic
docopt-ng = docopt-ng
docopt = docopt

[options.package_data]
dvg =
    bin/*
    models/*

[tox:tox]
envlist = py38, py39, py310

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
commands =
    python -m pip install docopt-ng
    python -m unittest discover
